[gd_scene load_steps=7 format=1]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Resources/Sprites/background.jpg" type="Texture" id=2]
[ext_resource path="res://Resources/Sprites/GUI/button0000.png" type="Texture" id=3]
[ext_resource path="res://Resources/Sprites/GUI/button0002.png" type="Texture" id=4]
[ext_resource path="res://Resources/Sprites/GUI/button0001.png" type="Texture" id=5]
[ext_resource path="res://Resources/Fonts/gooddog30.fnt" type="BitmapFont" id=6]

[node name="MainMenu" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="Background" type="TextureFrame" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 0

[node name="VBox" type="VBoxContainer" parent="."]

editor/display_folded = true
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 1
size_flags/vertical = 1
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
alignment = 0

[node name="New Game" type="TextureButton" parent="VBox"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 1
margin/left = 422.0
margin/top = 63.0
margin/right = 602.0
margin/bottom = 133.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )
textures/hover = ExtResource( 5 )
textures/disabled = ExtResource( 4 )

[node name="Label" type="Label" parent="VBox/New Game"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 180.0
margin/bottom = 70.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "New Game"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Load Game" type="TextureButton" parent="VBox"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 1
margin/left = 422.0
margin/top = 264.0
margin/right = 602.0
margin/bottom = 334.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )
textures/hover = ExtResource( 5 )
textures/disabled = ExtResource( 4 )

[node name="Label" type="Label" parent="VBox/Load Game"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 180.0
margin/bottom = 70.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Load Game"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Options" type="TextureButton" parent="VBox"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 1
margin/left = 422.0
margin/top = 466.0
margin/right = 602.0
margin/bottom = 536.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )
textures/hover = ExtResource( 5 )
textures/disabled = ExtResource( 4 )

[node name="Label" type="Label" parent="VBox/Options"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 180.0
margin/bottom = 70.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Options"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="OptionsContainer" type="VBoxContainer" parent="."]

editor/display_folded = true
visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 1
size_flags/vertical = 1
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
alignment = 0

[node name="TextSpeedLabel" type="Label" parent="OptionsContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 27.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Text Speed"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TextSpeedContainer" type="HBoxContainer" parent="OptionsContainer"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 31.0
margin/right = 1024.0
margin/bottom = 101.0
alignment = 0

[node name="Slow" type="TextureButton" parent="OptionsContainer/TextSpeedContainer"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 1
margin/left = 79.0
margin/top = 0.0
margin/right = 259.0
margin/bottom = 70.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )
textures/hover = ExtResource( 5 )
textures/disabled = ExtResource( 4 )

[node name="Label" type="Label" parent="OptionsContainer/TextSpeedContainer/Slow"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 180.0
margin/bottom = 70.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Slow"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Medium" type="TextureButton" parent="OptionsContainer/TextSpeedContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 1
margin/left = 421.0
margin/top = 0.0
margin/right = 601.0
margin/bottom = 70.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )
textures/hover = ExtResource( 5 )
textures/disabled = ExtResource( 4 )

[node name="Label" type="Label" parent="OptionsContainer/TextSpeedContainer/Medium"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 180.0
margin/bottom = 70.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Medium"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Fast" type="TextureButton" parent="OptionsContainer/TextSpeedContainer"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 1
margin/left = 764.0
margin/top = 0.0
margin/right = 944.0
margin/bottom = 70.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )
textures/hover = ExtResource( 5 )
textures/disabled = ExtResource( 4 )

[node name="Label" type="Label" parent="OptionsContainer/TextSpeedContainer/Fast"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 180.0
margin/bottom = 70.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Fast"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Back" type="TextureButton" parent="OptionsContainer"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 1
margin/left = 422.0
margin/top = 317.0
margin/right = 602.0
margin/bottom = 387.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )
textures/hover = ExtResource( 5 )
textures/disabled = ExtResource( 4 )

[node name="Label" type="Label" parent="OptionsContainer/Back"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 180.0
margin/bottom = 70.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Back"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="VBox/New Game" to="." method="_on_New_Game_pressed"]

[connection signal="pressed" from="VBox/Load Game" to="." method="_on_Load_Game_pressed"]

[connection signal="pressed" from="VBox/Options" to="." method="_on_Options_pressed"]

[connection signal="pressed" from="OptionsContainer/TextSpeedContainer/Slow" to="." method="_on_Slow_pressed"]

[connection signal="pressed" from="OptionsContainer/TextSpeedContainer/Medium" to="." method="_on_Medium_pressed"]

[connection signal="pressed" from="OptionsContainer/TextSpeedContainer/Fast" to="." method="_on_Fast_pressed"]

[connection signal="pressed" from="OptionsContainer/Back" to="." method="_on_Back_pressed"]


